Sforce8 Project Data/src/objects/ProfitandLoss__c.object
<CustomObject>
    <fields>
        <fullName>A01__c</fullName>
        <label>#A01_料理_会席</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A02__c</fullName>
        <label>#A02_料理_お膳</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A03__c</fullName>
        <label>#A03_料理_朝食</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A07a__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>内訳が不明な場合は直接合計金額を入力する</inlineHelpText>
        <label>#A07a_料理_合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A16a__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>内訳が不明な場合は直接合計金額を入力する</inlineHelpText>
        <label>#A16a_飲料_合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A26a__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>内訳が不明な場合は直接合計金額を入力する</inlineHelpText>
        <label>#A26a_室料_合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADR__c</fullName>
        <label>ADR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AofGOP__c</fullName>
        <label>線形近似傾き（GOP）</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B01__c</fullName>
        <label>#B01_期首棚卸高_材料</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B02__c</fullName>
        <label>#B02_期首棚卸高_売店</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B03__c</fullName>
        <label>#B03_期首棚卸高_飲料</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B28a__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>内訳が不明な場合は直接合計金額を入力する</inlineHelpText>
        <label>#B28a_原価_合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BofGOP__c</fullName>
        <label>線形近似傾切片（GOP）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C01__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#C01_電気 [kWh]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C02__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#C02_プロパンガス [m3]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C03__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#C03_灯油 [L]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>D01__c</fullName>
        <label>#D01_社員</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D02__c</fullName>
        <label>#D02_パート_長助さん</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D03__c</fullName>
        <label>#D03_パート_助さん</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D15a__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>内訳が不明な場合は直接合計金額を入力する</inlineHelpText>
        <label>#D15a_人件費_雇用形態別_合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>DATEVALUE( MID(Name, 0, 4) + &quot;-&quot; +  MID(Name, 5, 2) +&quot;-01&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>年月[年月名]の月の1日</inlineHelpText>
        <label>日付（年月[損益名]）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E01__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#E01_社員</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E02__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#E02_パート</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E03__c</fullName>
        <formula>E01__c+E02__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>正社員とパートの合計</inlineHelpText>
        <label>#E03_従業員数_合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F01__c</fullName>
        <label>#F01_役員報酬</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F02__c</fullName>
        <label>#F02_給与手当</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F03__c</fullName>
        <label>#F03_雑給</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>G01__c</fullName>
        <formula>IF(A75__c&lt;&gt;0, F47__c/A75__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>販売管理費合計 / 売上合計</inlineHelpText>
        <label>#G01_販管費率</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>H01__c</fullName>
        <formula>A75__c-B28__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>売上合計-原価の合計</inlineHelpText>
        <label>#H01_売上総利益（粗利）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H02__c</fullName>
        <formula>IF(A75__c&lt;&gt;0, H01__c/A75__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>粗利 / 売上合計</inlineHelpText>
        <label>#H02_粗利率</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>J01__c</fullName>
        <formula>K01__c+F04__c+F05__c+F01__c+F11__c+F12__c+F40__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(売上合計 - 原価合計) - (販売管理費合計 - (役員報酬 + 賞与引当金 + 退職金引当金 + 減価償却費 + ブライダル開業償却費 + 権利金等償却費))</inlineHelpText>
        <label>#J01_営業粗利益（GOP）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>J02__c</fullName>
        <formula>IF(A75__c&lt;&gt;0, J01__c/A75__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>営業粗利益（GOP） / 売上合計</inlineHelpText>
        <label>#J02_GOP率</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>K01__c</fullName>
        <formula>H01__c-F47__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(売上合計 - 原価合計) - 販売管理費合計</inlineHelpText>
        <label>#K01_営業利益</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>K02__c</fullName>
        <formula>IF(A75__c&lt;&gt;0, K01__c/A75__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>営業利益 / 売上合計</inlineHelpText>
        <label>#K02_営業利益率</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L01__c</fullName>
        <label>#L01_収益</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L02__c</fullName>
        <label>#L02_費用</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L03__c</fullName>
        <formula>L01__c-L02__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>営業外収益 - 営業外費用</inlineHelpText>
        <label>#L03_損益</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M01__c</fullName>
        <formula>K01__c+L03__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>((売上合計 - 原価合計) - 販売管理費合計) + (営業外収益 - 営業外費用)</inlineHelpText>
        <label>#M01_経常利益</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M02__c</fullName>
        <formula>IF(A75__c&lt;&gt;0, M01__c/A75__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>経常利益 / 売上合計</inlineHelpText>
        <label>#M02_経常利益率</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>レポートの棒グラフで会計年度の4月から並べるため</description>
        <formula>CASE(VALUE(MID(Name,5,2)),1,&quot;１月&quot;,2,&quot;２月&quot;,3,&quot;３月&quot;,10,&quot;１0月&quot;,11,&quot;１1月&quot;,12,&quot;１2月&quot;,TEXT(VALUE(MID(Name,5,2)))+&quot;月&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>月</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R01__c</fullName>
        <label>#R01_法人部門_法人予約_営業担当付_組数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R02__c</fullName>
        <label>#R02_法人部門_法人予約_営業担当付_人数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R03__c</fullName>
        <label>#R03_法人部門_法人予約_営業担当付_売上</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>S01__c</fullName>
        <label>#S01_個人部門（ブライダル）_婚礼_組数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S02__c</fullName>
        <label>#S02_個人部門（ブライダル）_婚礼_人数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S03__c</fullName>
        <label>#S03_個人部門（ブライダル）_婚礼_売上</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>T01__c</fullName>
        <label>#T01_個人部門（法事・一般）_個人予約_法事_組数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T02__c</fullName>
        <label>#T02_個人部門（法事・一般）_個人予約_法事_人数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T03__c</fullName>
        <label>#T03_個人部門（法事・一般）_個人予約_法事_売上</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>U01__c</fullName>
        <label>#U01_レストラン部門_賑わい亭でお食事_組数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>U02__c</fullName>
        <label>#U02_レストラン部門_賑わい亭でお食事_人数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>U03__c</fullName>
        <label>#U03レストラン部門_賑わい亭でお食事_売上</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>V01__c</fullName>
        <label>#V01_客室部門_お部屋でお食事_組数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>V02__c</fullName>
        <label>#V02_客室部門_お部屋でお食事_人数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>V03__c</fullName>
        <label>#V03_客室部門_お部屋でお食事_売上</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>W01__c</fullName>
        <formula>S02__c + U02__c + U06__c + V02__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>合計人数</inlineHelpText>
        <label>#W01_料飲部門_人数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W02__c</fullName>
        <formula>A07__c + A16__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>料理売上 + 飲料売上</inlineHelpText>
        <label>#W02_料飲部門_売上</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>W03__c</fullName>
        <formula>IF(W01__c&lt;&gt;0, A07__c/W01__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>料理売上 / 人数</inlineHelpText>
        <label>#W03_料飲部門_料理客単価</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X01__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#X01_竹河</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X02__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#X02_富月殿</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X03__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#X03_源氏館</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>XofGOP__c</fullName>
        <description>各年度の2レコードに線形近似Y（GOP）とともに入力し、 
$5051 損益分岐点(GOP)[線形近似] に直線を表示する</description>
        <inlineHelpText>レポート：$5051 損益分岐点(GOP)[線形近似] の線形近似直線の端点のX座標</inlineHelpText>
        <label>線形近似X（GOP）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>XofNetOperatingProfit__c</fullName>
        <description>各年度の2レコードに線形近似Y（営業利益）とともに入力し、 
$5053 損益分岐点(営業利益)[線形近似] に直線を表示する</description>
        <inlineHelpText>レポート：$5053 損益分岐点(営業利益)[線形近似] の線形近似直線の端点のX座標</inlineHelpText>
        <label>線形近似X（営業利益）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y_x_GOP__c</fullName>
        <formula>AofGOP__c * A70__c + BofGOP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>線形近似Y(x)（GOP）</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(CASE(VALUE(MID( Name ,5,2)),1, YEAR(Date__c)-1,2,YEAR(Date__c)-1,3,YEAR(Date__c)-1,YEAR(Date__c)))+&quot;年度&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>年度</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YofGOP__c</fullName>
        <description>各年度の2レコードに線形近似X（GOP）とともに入力し、
$5051 損益分岐点(GOP)[線形近似] に直線を表示する</description>
        <inlineHelpText>レポート：$5051 損益分岐点(GOP)[線形近似] の線形近似直線の端点のY座標</inlineHelpText>
        <label>線形近似Y（GOP）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YofNetOperatingProfit__c</fullName>
        <description>各年度の2レコードに線形近似X（営業利益）とともに入力し、 
$5053 損益分岐点(営業利益)[線形近似] に直線を表示する</description>
        <inlineHelpText>レポート：$5053 損益分岐点(営業利益)[線形近似] の線形近似直線の端点のY座標</inlineHelpText>
        <label>線形近似Y（営業利益）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>損益</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>A74__c</columns>
        <columns>A70__c</columns>
        <columns>A73__c</columns>
        <columns>B28__c</columns>
        <columns>D15__c</columns>
        <columns>F46__c</columns>
        <columns>G01__c</columns>
        <columns>H01__c</columns>
        <columns>J01__c</columns>
        <columns>K01__c</columns>
        <columns>L03__c</columns>
        <columns>M01__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>年月[損益名]</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>